--- a/src/components/main.css
+++ b/src/components/main.css
@@ -6,13 +6,14 @@
 }
 
 .movContainer{
-    width: 100%;
-    margin-left: 0%;
+    width: 90%;
+    margin-left: 10%;
     height: 100%;
     display: grid;
-    grid-column-gap: 80px;
+    grid-column-gap: 3%;
     grid-row-gap: 80px;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 30% 30% 30%;
+    color: rgb(183, 206, 235);
 }
 .searchLine input{
     width: 55%;
@@ -30,7 +31,7 @@
     border: 1px solid #ccc;
     border-radius: 4px;
     color: rgb(0, 0, 0);
-    padding: 12px 32px;
+    padding: 12px 0px;
     width: 10%;
     text-align: center;
     text-decoration: none;
@@ -45,8 +46,9 @@
     transition: all 1000ms;
 }
 .movie{
-    /* width: 10%; */
+    min-width: 300px;
     overflow: hidden;
+
 }
 .photo{
     width: 100%;
@@ -61,8 +63,18 @@
     padding-left: 10px;
     transition: all 600ms;
 }
+.load{
+    color: rgb(183, 206, 235);
+    width: 100%;
+    text-align: center;
+    transition: all 500ms;
+    margin-top: 80px;
+    font-size: 50px;
+}
 
-
+.error{
+    width: 100%;
+}
 .title h1{
     margin: 0;
     text-align: left;
@@ -82,10 +94,18 @@
 } */
 
 
-@media screen and (max-width: 760px) {
+@media screen and (max-width: 1200px) {
     .movContainer{
         grid-template-columns: auto auto ;
     }
 
+    
+}
+@media screen and (max-width: 966px) {
+
+    .searchLine button{
+        font-size: 12px;
+        padding: 14px 0px;
+    }
     
 }
