--- a/src/components/main.css
+++ b/src/components/main.css
@@ -48,12 +48,13 @@
 .movie{
     min-width: 300px;
     overflow: hidden;
-
+    
 }
 .photo{
-    width: 100%;
+    /* width: 100%;
     height: 75%;
-    transition: all 600ms;
+    transition: all 600ms; */
+    box-shadow: 14px 15px 35px -15px rgba(0,0,0,0.75);
 }
 
 .title{
