--- a/src/components/main.css
+++ b/src/components/main.css
@@ -48,12 +48,12 @@
 .movie{
     min-width: 300px;
     overflow: hidden;
+    height: "550px";
     
 }
 .photo{
-    /* width: 100%;
-    height: 75%;
-    transition: all 600ms; */
+    width: "300px";
+    height: "400px";
     box-shadow: 14px 15px 35px -15px rgba(0,0,0,0.75);
 }
 
@@ -99,9 +99,8 @@
     .movContainer{
         grid-template-columns: auto auto ;
     }
-
-    
 }
+
 @media screen and (max-width: 966px) {
 
     .searchLine button{
