--- a/FrontEnd/src/components/main.css
+++ b/FrontEnd/src/components/main.css
@@ -48,12 +48,12 @@
 .movie{
     min-width: 300px;
     overflow: hidden;
-    height: "550px";
-    
+    height: 550px;
+ 
 }
 .photo{
-    width: "300px";
-    height: "400px";
+    width: 300px;
+    height: 400px;
     box-shadow: 14px 15px 35px -15px rgba(0,0,0,0.75);
 }
 
