--- a/FrontEnd/src/components/main.css
+++ b/FrontEnd/src/components/main.css
@@ -83,16 +83,6 @@
     
 }
 
-/* .movie:hover .title{
-    margin-top: -10%;
-    height: 36%;
-    transition: all 600ms;
-}
-
-.movie:hover .photo{
-    box-shadow: inset 0px 0px 60px 20px rgba(255, 255, 255, 0.288);
-    transition: all 600ms;
-} */
 
 
 @media screen and (max-width: 1200px) {
@@ -107,5 +97,33 @@
         font-size: 12px;
         padding: 14px 0px;
     }
-    
+
+    .searchLine{
+        padding: 50px 0% 100px 0%;
+    }
+}
+@media screen and (max-width: 866px) {
+    .movContainer{
+        width: 300px;
+        margin: auto auto;
+        display: grid;
+        grid-column-gap: 0%;
+        grid-template-columns: auto;
+    }
+
+}
+@media screen and (max-width: 766px) {
+
+    .searchLine button{
+        width: 80%;
+        margin-left: 10%;
+        margin-top: 20px;
+        padding: 10px 0px;
+    }
+    .searchLine input{
+        width: 80%;
+        margin-left: 10%;
+        padding: 8px 20px;
+    }
+
 }
